--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.ratioCalc {
+/* .ratioCalc {
     border: 20px solid red;
 }
 
@@ -39,4 +39,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
